Add new mieszkanies detection